--- a/package.json
+++ b/package.json
@@ -45,11 +45,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-redux-saga": "^1.3.2",
     "immer": "^9.0.21",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
