--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-encrypt": "^5.1.1",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
